--- a/_posts/2019-04-03-template.md
+++ b/_posts/2019-04-03-template.md
@@ -3,7 +3,6 @@ title: 博客模板
 categories: [blog, category]
 tags: [tag1, tag2]
 date: 2019-04-03
-post_date: 2019-04-03
 published: false
 author: lscpku
 ---
@@ -12,7 +11,7 @@ author: lscpku
 
 # {{page.title}}
 
-{{page.post_date}}  {{page.author}}
+{{page.date | '%B %d, %y'}}  {{page.author}}
 
 {% for tag in page.tags %}`{{ tag }}` {% endfor %}
 
