--- a/_posts/2019-04-11-anaconda.md
+++ b/_posts/2019-04-11-anaconda.md
@@ -16,7 +16,7 @@ author: lscpku
 
 ---
 
-### Anaconda修改为清华镜像源
+### Anaconda修改为清华镜像源（已无法使用）
 ```
 conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
 conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
@@ -53,6 +53,7 @@ conda --version
 conda create -n your_env_name python=X.X [packages]
 activate env_name
 deactivate
+conda remove -n your_env_name --all
 ```
 
 ## PyCharm
