--- a/_posts/2019-04-11-anaconda.md
+++ b/_posts/2019-04-11-anaconda.md
@@ -82,6 +82,12 @@ ssl._create_default_https_context=ssl._create_unverified_context
 ### OpenSSL
 先上网下载安装windows版的OpenSSL再安装Anaconda
 
+## 修改Jupyter工作目录
+在Anaconda Prompt里输入``jupyter lab --generate-config``。找到并打开``jupyter_notebook_config.py``。将``#c.NotebookApp.notebook_dir = ''``改成``c.NotebookApp.notebook_dir = 'E:\Python'``。
+
+
+### Call torch.cuda.current_device(): cuda runtime error(30) in Jupyter Lab
+管理员身份运行Anaconda3\Scripts\jupyter-lab.exe
 ---
 
 [返回目录](/table_of_posts.html)
