--- a/_posts/2019-04-16-links.md
+++ b/_posts/2019-04-16-links.md
@@ -1,12 +1,12 @@
-Generative Model
+###Generative Model
 [wavenet](https://deepmind.com/blog/wavenet-generative-model-raw-audio/)
 
-RL
-[OpenAI Gym](https://gym.openai.com/docs/)
-[DQN CartPole](https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html)
+###RL
+- [OpenAI Gym](https://gym.openai.com/docs/)
+- [PyTorch DQN Tutorial - CartPole](https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html)
 
-NLP
-PyTorch Tutorials
-[Classifying names with char level RNN](https://pytorch.org/tutorials/intermediate/char_rnn_classification_tutorial.html)
-[Translation with seq2seq and attention](https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html)
-[Chatbot](https://pytorch.org/tutorials/beginner/chatbot_tutorial.html)
+###NLP
+####PyTorch Tutorials
+- [Classifying names with char level RNN](https://pytorch.org/tutorials/intermediate/char_rnn_classification_tutorial.html)
+- [Translation with seq2seq and attention](https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html)
+- [Chatbot](https://pytorch.org/tutorials/beginner/chatbot_tutorial.html)
