--- a/_posts/2019-04-17-decaNLP.md
+++ b/_posts/2019-04-17-decaNLP.md
@@ -1,4 +1,22 @@
-# decaNLP
+---
+title: DecaNLP
+categories: [blog, nlp]
+tags: [nlp]
+date: 2019-04-17
+author: lscpku
+---
+
+{% include MathJaxHead.html %}
+
+# {{page.title}}
+
+{{page.date | date: '%Y-%m-%d'}} by {{page.author}}
+
+{% for tag in page.tags %}`{{ tag }}` {% endfor %}
+
+---
+
+# DecaNLP
 Richard Socher
 [The Natural Language Decathlon: Multitask Learning as QA](https://arxiv.org/pdf/1806.08730.pdf) by Bryan McCann et al.
 
@@ -79,3 +97,8 @@ Answer: positive <br>
 9. Compute weighted sum of distribution of output words.
 
 - Output is only one word.
+
+
+---
+
+[返回目录](/table_of_posts.html)
