--- a/_posts/2019-04-17-tcs.md
+++ b/_posts/2019-04-17-tcs.md
@@ -1,3 +1,21 @@
+---
+title: TCS
+categories: [blog, tcs]
+tags: [tcs]
+date: 2019-04-17
+author: lscpku
+---
+
+{% include MathJaxHead.html %}
+
+# {{page.title}}
+
+{{page.date | date: '%Y-%m-%d'}} by {{page.author}}
+
+{% for tag in page.tags %}`{{ tag }}` {% endfor %}
+
+---
+
 ### Transition tables
 - start $\to$
 - final $*$
@@ -6,7 +24,7 @@
 - item: states or set of states
 
 ### Proof
-- L(A) induction on |w|
+- $L(A)$ induction on $|w|$
 
 ### DFA to recognize set of words
 
@@ -23,3 +41,6 @@
 -$* > \cdot > +$
 - concat, +: group from left
 
+---
+
+[返回目录](/table_of_posts.html)
