--- a/_posts/2019-04-16-links.md
+++ b/_posts/2019-04-16-links.md
@@ -1,3 +1,21 @@
+---
+title: Links
+categories: [miscellaneous]
+tags: [links]
+date: 2019-04-16
+author: lscpku
+---
+
+{% include MathJaxHead.html %}
+
+# {{page.title}}
+
+{{page.date | date: '%Y-%m-%d'}} by {{page.author}}
+
+{% for tag in page.tags %}`{{ tag }}` {% endfor %}
+
+---
+
 ### Generative Model
 [wavenet](https://deepmind.com/blog/wavenet-generative-model-raw-audio/)
 
@@ -10,3 +28,7 @@
 - [Classifying names with char level RNN](https://pytorch.org/tutorials/intermediate/char_rnn_classification_tutorial.html)
 - [Translation with seq2seq and attention](https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html)
 - [Chatbot](https://pytorch.org/tutorials/beginner/chatbot_tutorial.html)
+
+---
+
+[返回目录](/table_of_posts.html)
