--- a/_posts/2019-04-17-tcs.md
+++ b/_posts/2019-04-17-tcs.md
@@ -41,6 +41,12 @@ author: lscpku
 -$* > \cdot > +$
 - concat, +: group from left
 
+- \emptyset R = \emptyset
+DFA to RegEx eliminate states; floyd
+
+- order the elimination of states
+- RegEx to \epsilon-NFA: one accepting state; no arcs into intial; no arcs out of final
+
 ---
 
 [返回目录](/table_of_posts.html)
